--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <body>
   <header>
     <div class="hero-content">
-      <img src="jag.jpg" alt="Profilbild" class="hero-image">
+      <img src="hemsida/jag.jpg" alt="Profilbild" class="hero-image">
       <div class="hero-text">
         <h1>Välkommen till En tryggare väg</h1>
         <p>Stöd i livets svåra stunder – samtalsstöd online utan diagnoser eller journalföring.</p>
