--- a/index.html
+++ b/index.html
@@ -12,37 +12,49 @@
 
 <body>
   <header>
-    <h1>En tryggare väg</h1>
-    <p>Stöd och samtal för dig som behöver en förändring</p>
+    <div class="header-content">
+      <img src="jag.jpg" alt="Profilbild" class="profile-img">
+      <div class="header-text">
+        <h1>En tryggare väg</h1>
+        <p>Stöd och samtal för dig som behöver en förändring</p>
+      </div>
+    </div>
   </header>
 
   <main>
     <section class="profile">
-      <img src="jag.jpg.jpg" alt="Profilbild" class="profile-img">
-      <h2><i class="fas fa-person-meditating"></i> Om mig</h2>
-      <p>Jag erbjuder samtalsstöd med fokus på ångest, stress och livets utmaningar. Med evidensbaserade metoder som ACT, KBT och MCT skapar vi tillsammans en trygg väg framåt.</p>
+      <div class="om-mig-header">
+        <i class="fas fa-person-meditating"></i>
+        <h2>Om mig</h2>
+      </div>
+      <p>Jag erbjuder samtalsstöd med fokus på ångest, stress och livets utmaningar. Med evidensbaserade metoder som ACT, KBT och MCT skapar vi tillsammans en trygg väg framåt. Jag tror på trygghet, empati och att varje människa har möjlighet till förändring och helande i sin egen takt.</p>
+      <div class="meditationsfigur">
+        <img src="meditation.svg" alt="Meditationsfigur">
+      </div>
     </section>
 
     <section class="services">
-      <div class="service">
-        <i class="fas fa-brain"></i>
-        <h3>Ångest</h3>
-        <p>Hitta lugnet i kaoset. Vi arbetar med verktyg för att förstå och hantera ångest.</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-cloud"></i>
-        <h3>Depression</h3>
-        <p>När livet känns tungt finns det hjälp. Vi utforskar vägar till mening och energi.</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-compass"></i>
-        <h3>Coaching</h3>
-        <p>Har du fastnat i vardagen eller i din utveckling? Coaching hjälper dig att hitta nästa steg.</p>
-      </div>
-      <div class="service">
-        <i class="fas fa-hand-holding-heart"></i>
-        <h3>Samtalsstöd</h3>
-        <p>Ibland behöver vi bara bli hörda. Här får du ett tryggt utrymme för reflektion.</p>
+      <div class="service-grid">
+        <div class="service">
+          <i class="fas fa-brain"></i>
+          <h3>Ångest</h3>
+          <p>Hitta lugnet i kaoset. Vi arbetar med verktyg för att förstå och hantera ångest.</p>
+        </div>
+        <div class="service">
+          <i class="fas fa-cloud-rain"></i>
+          <h3>Depression</h3>
+          <p>När livet känns tungt finns det hjälp. Vi utforskar vägar till mening och energi.</p>
+        </div>
+        <div class="service">
+          <i class="fas fa-compass"></i>
+          <h3>Coaching</h3>
+          <p>Har du fastnat i vardagen eller i din utveckling? Coaching hjälper dig att hitta nästa steg.</p>
+        </div>
+        <div class="service">
+          <i class="fas fa-comments"></i>
+          <h3>Samtalsstöd</h3>
+          <p>Ibland behöver vi bara bli hörda. Här får du ett tryggt utrymme för reflektion.</p>
+        </div>
       </div>
     </section>
 
