--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <h2>Om mig</h2>
       </div>
       <p>Jag erbjuder samtalsstöd med fokus på ångest, stress och livets utmaningar. Med evidensbaserade metoder som ACT, KBT och MCT skapar vi tillsammans en trygg väg framåt. Jag tror på trygghet, empati och att varje människa har möjlighet till förändring och helande i sin egen takt.</p>
-      <div class="meditationsfigur">
-        <img src="meditation.svg" alt="Meditationsfigur">
-      </div>
+    <div class="meditationsfigur">
+  <i class="fas fa-seedling fa-3x" style="color:#7e57c2; opacity: 0.8;"></i>
+</div>
+
     </section>
 
     <section class="services">
