--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <main>
     <section class="profile">
       <div class="om-mig-header">
-        <i class="fas fa-person-meditating"></i>
+        <i class="fas fa-person-praying"></i>
         <h2>Om mig</h2>
       </div>
       <p>Jag erbjuder samtalsstöd med fokus på ångest, stress och livets utmaningar. Med evidensbaserade metoder som ACT, KBT och MCT skapar vi tillsammans en trygg väg framåt. Jag tror på trygghet, empati och att varje människa har möjlighet till förändring och helande i sin egen takt.</p>
-    <div class="meditationsfigur">
-  <i class="fas fa-seedling fa-3x" style="color:#7e57c2; opacity: 0.8;"></i>
-</div>
-
+      <div class="meditationsfigur" style="text-align:center; margin-top: 20px;">
+        <i class="fas fa-person-praying fa-4x" style="color:#444;"></i>
+        <p style="font-style: italic;">Inre ro och närvaro</p>
+      </div>
     </section>
 
     <section class="services">
@@ -49,7 +49,7 @@
         <div class="service">
           <i class="fas fa-compass"></i>
           <h3>Coaching</h3>
-          <p>Har du fastnat i vardagen eller i din utveckling? Coaching hjälper dig att hitta nästa steg.</p>
+          <p>Upplever du att du har fastnat i livet eller söker tydlighet i nästa steg? Coaching kan hjälpa dig att hitta riktning och fokus.</p>
         </div>
         <div class="service">
           <i class="fas fa-comments"></i>
